# Emulators

Chip8/: .gitignore  CMakeLists.txt
Chip8/inc/: emulator.h  random.h  screen.h
Chip8/src/: emulator.c  main.c  random.c  screen.c
